add a forecast subsystem