@@ -1,32 +1,32 @@
 package com.weatherforecast.service.util;
 
-import com.weatherforecast.dto.forecast.ForecastResponseDto;
+import com.weatherforecast.dto.forecast.DailyForecastResponseDto;
+import com.weatherforecast.dto.forecast.WeeklyForecastResponseDto;
 import com.weatherforecast.entity.Forecast;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
- * Converter for transforming between Forecast entity and Forecast DTOs.
+ * Converters for transforming between Forecast entity and Forecast DTOs.
  */
 @Component
 public class ForecastConverter {
 
-    public ForecastResponseDto toDto(Forecast forecast) {
-        return ForecastResponseDto.builder()
-                .id(forecast.getId())
-                .cityName(forecast.getCity().getName())
-                .forecastDate(forecast.getForecastDate())
-                .tempMax(forecast.getTempMax())
-                .tempMin(forecast.getTempMin())
-                .precipitation(forecast.getPrecipitation())
+    public DailyForecastResponseDto toDto(Forecast forecast) {
+        return DailyForecastResponseDto.builder()
+                .date(forecast.getForecastDate())
+                .maxTemp(forecast.getMaxTemp())
+                .minTemp(forecast.getMinTemp())
+                .precip(forecast.getPrecip())
                 .build();
     }
 
-    public List<ForecastResponseDto> fromForecastsToDtoList(List<Forecast> forecasts) {
-        return forecasts.stream()
-                .map(this::toDto)
-                .toList();
+    public WeeklyForecastResponseDto toDto(String city, List<Forecast> entities) {
+        List<DailyForecastResponseDto> forecastDtos = entities.stream()
+                .map(entity -> toDto(entity))
+                .collect(Collectors.toList());
+        return new WeeklyForecastResponseDto(city, forecastDtos);
     }
-
 }
